testsuite/tests/typecheck/should_fail/T17213.hs
module T17213 where

import T17213a

g = foo
